--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-setuptools>=58.0.0
-wheel>=0.37.0
 absl-py==2.1.0
 aiohappyeyeballs==2.4.4
 aiohttp==3.11.10
@@ -40,7 +38,7 @@ flatbuffers==24.3.25
 fonttools==4.55.2
 frozenlist==1.5.0
 fsspec==2024.9.0
-gast==0.4.0
+gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.68.1
 h11==0.14.0
@@ -59,7 +57,7 @@ jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 jupyterlab_pygments==0.3.0
-keras==2.11.0
+keras==3.7.0
 kiwisolver==1.4.7
 libclang==18.1.1
 Mako==1.3.8
@@ -82,7 +80,7 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.4.2
 nltk==3.9.1
-numpy==1.24.3
+numpy==2.2.0
 opt_einsum==3.4.0
 optree==0.13.1
 packaging==24.2
@@ -128,11 +126,12 @@ stack-data==0.6.3
 starlette==0.41.3
 sympy==1.13.1
 tenacity==9.0.0
-tensorboard==2.11.0
+tensorboard==2.18.0
 tensorboard-data-server==0.7.2
 tensorflow==2.18.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.5.0
+tf_keras==2.18.0
 threadpoolctl==3.5.0
 tinycss2==1.4.0
 tokenizers==0.21.0
@@ -152,4 +151,3 @@ wordcloud==1.9.4
 wrapt==1.17.0
 xxhash==3.5.0
 yarl==1.18.3
-setuptools==65.5.0
