--- a/requirements.txt
+++ b/requirements.txt
@@ -1,153 +1,43 @@
-absl-py==2.1.0
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.10
-aiosignal==1.3.1
-alembic==1.14.0
-annotated-types==0.7.0
-anyio==4.7.0
-appnope==0.1.4
-asttokens==3.0.0
-astunparse==1.6.3
-attrs==24.2.0
-banal==1.0.6
-beautifulsoup4==4.12.3
-bleach==6.2.0
-blinker==1.9.0
-cachelib==0.9.0
-certifi==2024.8.30
-charset-normalizer==3.4.0
-click==8.1.7
-comm==0.2.2
-contourpy==1.3.1
-cycler==0.12.1
-dataset==1.6.2
-datasets==3.2.0
-debugpy==1.8.9
-decorator==5.1.1
-defusedxml==0.7.1
-dill==0.3.8
-executing==2.1.0
-fastapi==0.115.6
-fastjsonschema==2.21.1
-filelock==3.16.1
-Flask==3.1.0
+# Core libraries
+numpy==1.24.3
+pandas==1.5.3
+scipy==1.10.1
+matplotlib==3.7.1
+seaborn==0.12.2
+
+# Machine Learning
+scikit-learn==1.2.2
+tensorflow==2.11.0
+keras==2.11.0
+
+# Web Framework
+Flask==2.3.2
 Flask-Caching==2.3.0
 Flask-JWT-Extended==4.7.1
-flask-talisman==1.1.0
-flatbuffers==24.3.25
-fonttools==4.55.2
-frozenlist==1.5.0
-fsspec==2024.9.0
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.68.1
-h11==0.14.0
-h5py==3.12.1
-huggingface-hub==0.26.5
-idna==3.10
-imbalanced-learn==0.12.4
-ipykernel==6.29.5
-ipython==8.30.0
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.4
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
-keras==3.7.0
-kiwisolver==1.4.7
-libclang==18.1.1
-Mako==1.3.8
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.23.1
-matplotlib==3.9.3
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mistune==3.0.2
-ml-dtypes==0.4.1
-mpmath==1.3.0
-multidict==6.1.0
-multiprocess==0.70.16
-namex==0.0.8
-nbclient==0.10.1
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.4.2
-nltk==3.9.1
-numpy==2.2.0
-opt_einsum==3.4.0
-optree==0.13.1
-packaging==24.2
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-pexpect==4.9.0
-pillow==11.0.0
-platformdirs==4.3.6
-plotly==5.24.1
-prompt_toolkit==3.0.48
-propcache==0.2.1
-protobuf==5.29.1
-psutil==6.1.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyarrow==18.1.0
-pydantic==2.10.3
-pydantic_core==2.27.1
-Pygments==2.18.0
-PyJWT==2.10.1
-pyparsing==3.2.0
-python-dateutil==2.9.0.post0
-pytz==2024.2
-PyYAML==6.0.2
-pyzmq==26.2.0
-referencing==0.35.1
-regex==2024.11.6
-requests==2.32.3
-rich==13.9.4
-rpds==5.1.0
-rpds-py==0.22.3
-safetensors==0.4.5
-scikit-learn==1.6.0
-scipy==1.14.1
-seaborn==0.13.2
-six==1.17.0
-sniffio==1.3.1
-soupsieve==2.6
-SpeechRecognition==3.12.0
-SQLAlchemy==1.4.54
-stack-data==0.6.3
-starlette==0.41.3
-sympy==1.13.1
-tenacity==9.0.0
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-tensorflow-io-gcs-filesystem==0.37.1
-termcolor==2.5.0
-tf_keras==2.18.0
-threadpoolctl==3.5.0
-tinycss2==1.4.0
-tokenizers==0.21.0
-torch==2.5.1
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.47.0
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.2.3
-uvicorn==0.32.1
-wcwidth==0.2.13
-webencodings==0.5.1
-Werkzeug==3.1.3
-wordcloud==1.9.4
-wrapt==1.17.0
-xxhash==3.5.0
-yarl==1.18.3
+
+# API and Async Libraries
+fastapi==0.88.0
+uvicorn==0.20.0
+aiohttp==3.8.5
+
+# NLP
+nltk==3.8.1
+spacy==3.5.3
+transformers==4.31.0
+
+# Utilities
+requests==2.31.0
+joblib==1.3.2
+dill==0.3.6
+
+# Data Handling
+sqlalchemy==2.0.19
+psycopg2-binary==2.9.6
+datasets==2.14.0
+
+# Testing
+pytest==7.4.0
+pytest-mock==3.11.1
+
+# Security
+python-dotenv==1.0.0
